fixed carousel spacing

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ footer {
 
 .carousel-caption {
   position: aboslute;
-  top: 15%;
+  top: 45%;
   transform: translateY(-50%);
 }
 
